Add avatar to home page

--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,6 @@
 lang: en-US
 title: Tim McManemy
 description: skeptic, pragmatists, programmer
+avatar: http://gravatar.com/avatar/5d01e1913acf3baa6d90639708b20f72
 
 theme: jekyll-theme-cayman
