Add Google Analytics

--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,6 @@ lang: en-US
 title: Tim McManemy
 description: skeptic, pragmatists, programmer
 avatar: http://gravatar.com/avatar/5d01e1913acf3baa6d90639708b20f72
+google_analytics_tracking_id: UA-43010596-1
 
 theme: jekyll-theme-cayman
